# port-libwebp

./: README.md  all_cves.json  test-original.sh  validator-report.md  workflow.yaml
.cargo/: config.toml
.github/workflows/: build-debs.yml
.plan/: plan.md
original/: CMakeLists.txt
packaging/: package.env
safe/: Cargo.toml
safe/abi/original/: install-surface.json  libsharpyuv.exports  libwebp.exports  libwebpdecoder.exports  libwebpdemux.exports  libwebpmux.exports  needed.json  relink-manifest.json  sonames.json
safe/cmake/: WebPConfig.cmake.in
safe/crates/libsharpyuv/: Cargo.toml  build.rs
safe/crates/libsharpyuv/src/: lib.rs
safe/crates/libwebp/: Cargo.toml  build.rs
safe/crates/libwebp/src/: lib.rs
safe/crates/libwebpdecoder/: Cargo.toml  build.rs
safe/crates/libwebpdecoder/src/: lib.rs
safe/crates/libwebpdemux/: Cargo.toml  build.rs
safe/crates/libwebpdemux/src/: lib.rs
safe/crates/libwebpmux/: Cargo.toml  build.rs
safe/crates/libwebpmux/src/: lib.rs
safe/crates/webp-abi/: Cargo.toml  build.rs
safe/crates/webp-abi/src/: decode.rs  demux.rs  encode.rs  lib.rs  mux.rs  sharpyuv.rs  types.rs
safe/crates/webp-abi/tests/: ffi_layout.rs
safe/crates/webp-core/: Cargo.toml
safe/crates/webp-core/src/: alloc.rs  checked.rs  compat.rs  cpu.rs  lib.rs  threading.rs
safe/crates/webp-core/src/decode/: alpha_dec.rs  buffer_dec.rs  frame_dec.rs  idec_dec.rs  io_dec.rs  mod.rs  quant_dec.rs  tree_dec.rs  vp8_dec.rs  vp8l_dec.rs  webp_dec.rs
safe/crates/webp-core/src/demux/: anim_decode.rs  demux.rs  mod.rs
safe/crates/webp-core/src/dsp/: alpha_processing.rs  dec.rs  dec_clip_tables.rs  filters.rs  lossless.rs  mod.rs  rescaler.rs  upsampling.rs  yuv.rs
safe/crates/webp-core/src/encode/: alpha_enc.rs  analysis_enc.rs  backward_references_cost_enc.rs  backward_references_enc.rs  config_enc.rs  cost_enc.rs  filter_enc.rs  frame_enc.rs  histogram_enc.rs  iterator_enc.rs  mod.rs  near_lossless_enc.rs  picture_csp_enc.rs  picture_enc.rs  picture_rescale_enc.rs  picture_tools_enc.rs  predictor_enc.rs  quant_enc.rs  syntax_enc.rs  token_enc.rs  tree_enc.rs  vp8l_enc.rs  webp_enc.rs
safe/crates/webp-core/src/mux/: anim_encode.rs  mod.rs  muxedit.rs  muxinternal.rs  muxread.rs
safe/crates/webp-core/src/sharpyuv/: convert.rs  csp.rs  dsp.rs  gamma.rs  mod.rs
safe/crates/webp-core/src/utils/: bit_reader.rs  color_cache.rs  filters.rs  huffman.rs  mod.rs  quant_levels_dec.rs  rescaler.rs  utils.rs
safe/crates/webp-core/tests/: cve_2020_36332.rs  encode_security.rs  malformed_huffman_tables.rs
safe/debian/: changelog  clean  libsharpyuv-dev.install  libsharpyuv0.install  libwebp-dev.docs  libwebp-dev.install  libwebp7.install  libwebpdecoder3.install  libwebpdemux2.install  libwebpmux3.install  rules  webp.install  webp.manpages
safe/docs/: unsafe-audit.md
safe/pkgconfig/: libsharpyuv.pc.in  libwebp.pc.in  libwebpdecoder.pc.in
safe/tests/c/: CMakeLists.txt  demux_animdecode_test.c  encode_api_test.c
safe/tools/: elf_prune.rs  linker-wrapper.sh
safe/xtask/: Cargo.toml
safe/xtask/src/: baseline.rs  link.rs  main.rs  package.rs  tools.rs  verify.rs
