[workspace]
members = [
    "crates/libsharpyuv",
    "crates/libwebp",
    "crates/libwebpdecoder",
    "crates/libwebpdemux",
    "crates/libwebpmux",
    "crates/webp-abi",
    "crates/webp-core",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.95"
c2rust-bitfields = { version = "0.22.1", default-features = false, features = ["no_std"] }
clap = { version = "4.5.23", features = ["derive"] }
libc = "0.2.169"
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tempfile = "3.14.0"
walkdir = "2.5.0"

[workspace.lints.rust]
rust_2018_idioms = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_attributes = "deny"
unused_lifetimes = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"

[profile.release]
codegen-units = 1
lto = false
panic = "abort"
strip = "debuginfo"

[profile.dev]
panic = "abort"
