[package]
name = "xtask"
edition.workspace = true
license.workspace = true
publish = false
version.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
walkdir.workspace = true

[lints]
workspace = true
