[package]
name = "libsharpyuv"
build = "build.rs"
edition.workspace = true
license.workspace = true
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib"]
name = "sharpyuv"
path = "src/lib.rs"

[dependencies]
libc.workspace = true
webp-abi = { path = "../webp-abi" }
webp-core = { path = "../webp-core" }

[build-dependencies]
serde_json.workspace = true

[lints]
workspace = true
