[package]
name = "libsharpyuv"
build = "build.rs"
edition.workspace = true
license.workspace = true
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
doctest = false
test = false
name = "sharpyuv"
path = "src/lib.rs"

[dependencies]
libc.workspace = true
webp-abi = { path = "../webp-abi" }
webp-core = { path = "../webp-core", default-features = false, features = ["sharpyuv"] }

[build-dependencies]
cc = "1.2.62"
serde_json.workspace = true

[lints]
workspace = true
