[package]
name = "libwebp"
build = "build.rs"
edition.workspace = true
license.workspace = true
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
doctest = false
test = false
name = "webp"
path = "src/lib.rs"

[dependencies]
libc.workspace = true
webp-core = { path = "../webp-core", default-features = false, features = ["decode", "encode"] }

[build-dependencies]
cc = "1.2.20"
serde_json.workspace = true

[lints]
workspace = true
